# aoc_2025

./: .gitignore  Cargo.toml
benches/: bench_aoc_1.rs  bench_aoc_2.rs  bench_aoc_3.rs  bench_aoc_4.rs  bench_aoc_5.rs  bench_aoc_6.rs  bench_aoc_7.rs  bench_aoc_8.rs
src/: aoc.rs  lib.rs  main.rs
src/aoc/: aoc_1.rs  aoc_2.rs  aoc_3.rs  aoc_4.rs  aoc_5.rs  aoc_6.rs  aoc_7.rs  aoc_8.rs
