[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "bench_aoc_1"
harness = false

[[bench]]
name = "bench_aoc_2"
harness = false
[[bench]]
name = "bench_aoc_3"
harness = false
[dependencies]
strength_reduce = "0.2.4"