[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
[build]
rustflags = ["-C", "target-cpu=native"]

[[bench]]
name = "bench_aoc_1"
harness = false

[[bench]]
name = "bench_aoc_2"
harness = false
[[bench]]
name = "bench_aoc_3"
harness = false
[[bench]]
name = "bench_aoc_4"
harness = false
[[bench]]
name = "bench_aoc_5"
harness = false

[[bench]]
name = "bench_aoc_6"
harness = false

[[bench]]
name = "bench_aoc_7"
harness = false

[dependencies]
[profile.bench]
opt-level = 3
lto = "fat"          # "Link Time Optimization" - Critical for micro-benchmarks
codegen-units = 1    # Slows compile time, but makes faster code
panic = "abort"      # Removes stack unwinding checks (faster)
